--- a/src/components/Activity/Activity.module.scss
+++ b/src/components/Activity/Activity.module.scss
@@ -1,3 +1,8 @@
 .estiloCard {
-  margin: 5px 0;
+  width: 250px;
+  margin: 4px;
+  float: left;
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
